[package]
name = "lumpi_compression"
version = "2.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
zstd = { version = "0.13", features = ["zstdmt"] } 
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "lumpi"
path = "src/main.rs"