[package]
name = "lumpi_compression"
version = "6.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
zstd = { version = "0.13", features = ["zstdmt"] } 
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"
memchr = "2.7"
brotli = "7.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "lumpi"
path = "src/main.rs"